[package]
name = "jabba-ctc"
version = "0.1.1"  # Update version number in config.rs too!
authors = ["Laszlo Szathmary, alias Jabba Laci <jabba.laci@gmail.com>"]
edition = "2021"
description = "Copies its argument (as text) to the clipboard."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jabbalaci/jabba-ctc"
keywords = ["argument", "clipboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jabba-lib = "0.1.6"

[profile.release]
opt-level = "z"
lto = true
strip = true

[[bin]]
bench = false
path = "src/main.rs"
name = "ctc"
